2008-10-07  Shigeharu Takeno  <shige@iee.niit.ac.jp>

	* src/plot.c (main) docs/gnuplot.doc:
	Add a command line option -e to execute specified commands:
	gnuplot   file1.in   -e "reset"   file2.in

2008-10-06  Juergen Wieferink <wieferink@freenet.de>

	* src/set.c (set_palette_defined): Allow string variables and
	expressions in "set palette defined". SF #2149065

2008-10-02  Ethan Merritt  <merritt@u.washington.edu>

	* src/mouse.c src/mouse.h src/set.c (set_mouse):
	Do not free() the permanent copy of default mouse format.
	Bug #2142011

2008-09-29  Ethan Merritt  <merritt@u.washington.edu>

	* src/graphics.c (plot_image_or_update_axes) src/plot2d.c (get_data)
	term/pdf.trm (PDF_image) src/wxterminal/gp_cairo.c (gp_cairo_draw_image)
	src/plot3d.c (get_3ddata) term/gd.trm (PNG_image) demo/imageNaN.dem:

	When converting image data to image pixels, missing/NaN/Inf data points
	were being mapped to 0.  Since 0 can often be a legitimate cbrange
	value, this was unfortunate.  Modify the input code to retain the
	actual missing/NaN/Inf value, and teach the generic image code to skip
	NaN data points. +Inf, -Inf values are now correctly pinned to the
	extremes of the colorbar palette.  The terminal-specific image routines
	handled by libgd, PDFlib, and cairo are similarly modified.

2008-09-29  Petr Mikulik  <mikulik@physics.muni.cz>

	* src/color.h: Add field c into structure gpdPoint.

	* src/pm3d.c (pm3d_plot): Support "pm3d interpolate" for surfaces
	given by both z and colour coordinates.
	SF Bug #2127845

2008-09-25  Ethan Merritt  <merritt@u.washington.edu>

	* src/set.c (set_label load_tic_users prune_dataticks)
	src/internal.c (f_strftime):  Fix memory leaks found by valgrind.
	Memcheck now gives all.dem a clean bill of health.

2008-09-23  Ethan Merritt  <merritt@u.washington.edu>

	* demo/html/Makefile demo/html/index.save:
	Add ellipse.dem to the set of auto-generated sample plots.

	* docs/gnuplot.doc src/gadgets.h src/graphics.c src/graphics.h